--- a/src/styles/drag-drop.css
+++ b/src/styles/drag-drop.css
@@ -535,12 +535,15 @@
 .horizontal-container .container-items {
   flex-direction: row;
   flex-wrap: nowrap;
+  align-items: stretch;
 }
 
 .horizontal-container .container-item {
   flex-shrink: 0;
-  min-width: 100px;
+  min-width: 150px;
   max-width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 /* Grid column utilities */
